src/pages/PlaylistPage.scss
.filter {
  margin-top: 63px;
}

.headerRow {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	margin-top: 22px;
	margin-bottom: 5px;
}

.courseInfoBtn {
  margin-left: auto;
  &,
  &:hover,
  &:active:focus,
  &:focus {
    outline: none;
  }	
}

.glyph {
	padding-right: 6px;
}

/* Media screen */
@media only screen and (max-width: 1156px) {
  .courseInfoBtn {
    margin-top: 10px;
    margin-left: 0;
  }
}

@media only screen and (max-width: 767px) {
	.headerRow {
		display: inline-block;
	}
}

